Patched Card Links Bug
patched bug that caused order of card links to be inconsistent and pushed links too far right on pharaoh's phury card

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -559,6 +559,12 @@ footer .wrapper a {
   padding: 0 1em;
 }
 
+.card .links {
+  display: flex;
+  align-items: flex-start;
+  flex-wrap: wrap;
+}
+
 /* education section ------------------------------------------------------- */
 #education a {
   float: right;
